wpd of all introduction examples included

--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -552,7 +552,7 @@ Similarly, a harmony pair $(A, B)$ could be selected if $wpd^{A, B}_{obs} > wpd_
 
 ## Ranking
 
-The distribution of $wpd$ is expected to be similar for all harmonies under the null hypothesis, since they have been adjusted for different number of categories for the harmonies or underlying distribution of the measured variable. Hence, the values of $wpd$ for different harmonies are comparable and can be used to rank the significant harmonies. A higher value of $wpd$ for a harmony indicates that higher maximum variation in the measured variable is captured through that harmony. Figure \ref{fig:null4by2} presents the results of $wpd$ from the illustrative designs in Section \ref{sec:computation-wpd}. The value of $wpd$ under null design (a) is the least, followed by (b), (c) and (d). This aligns with the principle of $wpd$, which is expected to have lowest value for null designs and highest for designs of the form $D_{var_{all}}$ (d). Moreover, note the relative differences in $wpd$  values between (b) and (c). The value of the tuning parameter $\lambda$ is set to $0.67$, which has resulted in giving more emphasis to differences in x-axis categories. 
+The distribution of $wpd$ is expected to be similar for all harmonies under the null hypothesis, since they have been adjusted for different number of categories for the harmonies or underlying distribution of the measured variable. Hence, the values of $wpd$ for different harmonies are comparable and can be used to rank the significant harmonies. A higher value of $wpd$ for a harmony indicates that higher maximum variation in the measured variable is captured through that harmony. Figure \ref{fig:null4by2} presents the results of $wpd$ from the illustrative designs in Section \ref{sec:computation-wpd}. The value of $wpd$ under null design (a) is the least, followed by (b), (c) and (d). This aligns with the principle of $wpd$, which is expected to have lowest value for null designs and highest for designs of the form $D_{var_{all}}$ (d). Moreover, note the relative differences in $wpd$  values between (b) and (c). The value of the tuning parameter $\lambda$ is set to $0.67$, which has resulted in giving more emphasis to differences in x-axis categories. Again consider \ref{fig:onegran-new}(a) and \ref{fig:onegran-new}(b) with a $wpd$ value of 20.5 and 145 respectively. This is because there is more gradual increase across hours of the day than months of the year. If order is not considered, they result in a $wpd$ value of $97.8$ and $161$ respectively, which follows from the fact that if we consider difference between any hours of the day, the maginitude will be much larger than if we consider difference between consecutive categories. Simularly, for \ref{fig:onegran-new}(a) and (b) has $110.79$ and $125.82$ as the $wpd$ values and both are significant. The ranking implies that the distributional differences are more prominent for the second household, as is also seen from the bigger fluctuations in the $90^{th}$ percentile than the first household.
  
 
 <!-- ## Choosing a threshold -->
