--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1495,4 +1495,21 @@ Granularities},
    year      =  2016
  }
  
+ @Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  url = {https://yihui.org/knitr/},
+}
 
+@Book{rmarkdown2018,
+  title = {R Markdown: The Definitive Guide},
+  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2018},
+  url = {https://bookdown.org/yihui/rmarkdown},
+}
