--- a/paper/paper-supplementary.Rmd
+++ b/paper/paper-supplementary.Rmd
@@ -27,6 +27,7 @@ preamble: >
   \def\vspacing{\setlength{\aboverulesep}{0.4ex}\setlength{\belowrulesep}{0.65ex}}
 output:
   bookdown::pdf_book:
+    MonashEBSTemplates::workingpaper:
     #base_format: rticles::asa_article
     fig_height: 5
     fig_width: 8
@@ -64,7 +65,7 @@ library(broom)
 
 opts_chunk$set(
   echo = FALSE, warning = FALSE, message = FALSE, comment = "#>",
-  fig.path = "figure/", fig.align = "center", fig.show = "hold",
+  fig.path = "figure/", fig.align = "center", fig.show = "hold", fig.pos = "h",
   cache = TRUE, cache.path = "cache/",
   out.width = ifelse(is_html_output(), "100%", "\\textwidth")
 )
@@ -86,9 +87,10 @@ here::here()
 
 # Recalling notations
 
-Consider two cyclic granularities $A$ and $B$, such that $A = \{ a_j: j = 1, 2, \dots, J\}$ and $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets. Let $v = \{v_t: t = 0, 1, 2, \dots, T-1\}$ be a continuous measured variable observed across $T$ time points. The pairwise distances between pairs ($a_jb_k,a_j'b_k'$) could be within-facets or within-facets a seen in Figure 4 of the main paper. Let the four elementary designs be $D_{null}$ where there is no pairwise difference in distribution of $v$ across $A$ or $B$, $D_{var_f}$ denotes the set of designs where there is difference in distribution of $v$ for $B$ and not for $A$. Similarly, $D_{var_x}$ denotes the set of designs where difference is observed only across $A$. Finally, $D_{var_{all}}$ denotes those designs for which difference is observed across both $A$ and $B$. The following method is deployed for generating different distributions across different combinations for non-null designs - suppose the distribution of the combination of first levels of x and facet category is $N(\mu,\sigma)$ and $\mu_{jk}$ denotes the mean of the combination $(a_jb_k)$, then $\mu_{j.} = \mu + j\omega$ (for design $D_{var_x}$) and $\mu_{.k} = \mu + k\omega$ (for design $D_{var_f}$). Table \ref{tab:explain-design} shows an example of how initial distributions are assigned in a panel with $nfacet = 3$ and $nx = 2$ for different designs using $\omega = 1$.
+Let $v = \{v_t: t = 0, 1, 2, \dots, T-1\}$ be a continuous measured variable observed across $T$ time points. The number of cyclic granularities considered in the display/analysis is $m$. Consider cyclic granularities $A$ and $B$, such that $A = \{ a_j: j = 1, 2, \dots, J\}$ and $B = \{ b_k: k = 1, 2, \dots, K\}$. For $m=1$, only one of $A$ or $B$ is plotted at once and a _panel_ refers to a display of distributions of $v$ across $J$ or $K$ levels on the x-axis. For $m=2$, the distribution display of $v$ with $A$ placed across x-axis and $B$ across facets is referred to as a $(J, K)$ _panel_ ($J$ x-axis levels and $K$ facet levels). The pairwise distances between pairs ($a_jb_k,a_j'b_k'$) could be within-facets or between-facets as seen in Figure 4 of the main paper. The tuning parameter, used to put relative weight-age to the pairwise distances within and between facets is denoted by $\lambda$. Let the four elementary designs be $D_{null}$ where there is no pairwise difference in distribution of $v$ across $A$ or $B$, $D_{var_f}$ denotes the set of designs where there is difference in distribution of $v$ for $B$ and not for $A$. Similarly, $D_{var_x}$ denotes the set of designs where difference is observed only across $A$. Finally, $D_{var_{all}}$ denotes those designs for which difference is observed across both $A$ and $B$. The following method is deployed for generating different distributions across different combinations for non-null designs - suppose the distribution of the combination of first levels of x and facet category is $N(\mu,\sigma)$ and $\mu_{jk}$ denotes the mean of the combination $(a_jb_k)$, then $\mu_{j.} = \mu + j\omega$ (for design $D_{var_x}$) and $\mu_{.k} = \mu + k\omega$ (for design $D_{var_f}$), where $\omega$ denotes the increment in mean. Table \ref{tab:explain-design} shows an example of how designs are defined for a $(2, 3)$ panel using $\omega = 3$. $nx$ and $nfacet$ denotes the number of categories placed on x-axis and facets respectively. $wpd_{raw}$ and $wpd$ denote the raw and normalized weighted pairwise distances.
 
-```{r explain-design}
+
+```{r explain-design, fig.pos="h"}
 sim_varx_normal = function(nx, nfacet, mean, sd, w)
 {
   rep(dist_normal((mean + seq(0, nx-1, by  = 1)*w), sd), nfacet)
@@ -105,7 +107,7 @@ sim_varf_normal = function(nx, nfacet, mean, sd, w)
   
 mean = 0
 sd = 1
-w = 1
+w = 3
 nx = 2
 nfacet = 3
 
@@ -116,54 +118,67 @@ raw_levels = expand.grid(facet = c("$b_1$", "$b_2$", "$b_3$"),
 facet = rep(c("$b_1$", "$b_2$", "$b_3$"), each = nx)
 x =  rep(c("$a_1$", "$a_2$"), nfacet)
 
+null <-  sim_varall_normal(nx, nfacet, mean, sd, w=0) %>% tibble()
 vary_f <-  sim_varf_normal(nx, nfacet, mean, sd, w) %>% tibble()
 vary_x <-  sim_varx_normal(nx, nfacet, mean, sd, w) %>% tibble()
 vary_all <-  sim_varall_normal(nx, nfacet, mean, sd, w) %>% tibble()
 
+
 raw_table <- bind_cols(x = x, 
                        facet = facet, 
+                       null = null,
                        vary_f = vary_f, 
                        vary_x = vary_x, 
                        vary_all = vary_all) %>% 
   tibble() 
-names(raw_table) = c("x", "facet", "$D_{var_f}$", "$D_{var_x}$", "$D_{var_{all}}$" )
+names(raw_table) = c("x levels", "facet levels", "$D_{null}$",  "$D_{var_f}$", "$D_{var_x}$", "$D_{var_{all}}$" )
 raw_table %>% 
   kable(format = "latex",
     booktabs = TRUE, 
     escape = FALSE,
-    caption = "Simulation setup for a panel with 3 facet levels and 2 x-axis levels for different designs starting from an initial distribution N(0, 1) for the combination $(a_1, b_1)$.") %>% kable_styling()
+    caption = "Simulation setup for a panel with 3 facet levels and 2 x-axis levels for different designs starting from an initial distribution N(0, 1) for the combination $(a_1, b_1)$ and $\\omega=1$.") %>% kable_styling()
 ```
 
-# Behavior of raw weighted distance measure
+# Raw weighted pairwise distance
 
 ## Tuning parameter
 
-How does the tuning parameter affects the value of $wpd$ under different designs? The tuning parameter is used to put relative weight-age to the difference in distributions within and between facets. So it is interesting to see how the value of $wpd$ changes for these two designs. But the tuning parameter might have a different impact depending on the value of $\omega$ and different levels of x and facets.
-Hence, a simulation study is conducted to see the impact of $\omega$, $nx$, $nfacet$ and $\lambda$ together on the values of $nx$ and $nfacet$.
+For $m=1$, pairwise distances could be defined only between different categories of the cyclic granularity considered. So no tuning parameter is applicable for this case. For $m=2$, $\lambda$ might impact $wpd_{raw}$ differently depending on the value of $\omega$ and different values of $nx$, $nfacet$ and designs. The following simulation study sees the impact of $\lambda$ for different $\omega$, $nx$, $nfacet$ and designs.    
 
-### Simulation design
+_Simulation design_
 
-Observations are generated from Normal(0,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20\}$. 
-Let $\omega = \{1, 2, \dots, 10\}$ denotes the variable denoting the increment in mean of the distribution. The values of lambda ranges from ${0.1, 0.2, \dots, 0.9}$. Two designs are considered $D_{var_x}$ and $D_{var_f}$ and the values of $wpd$ is being computed for all these different values of the considered variable. 
+Observations are generated from Normal(0,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7\}$ and $wpd_{raw}$ is computed for $\lambda = {0.1, 0.2, \dots, 0.9}$ under two designs $D_{var_x}$ and $D_{var_f}$ for $\omega = \{1, 8\}$  to observe how the value of $wpd_{raw}$ changes for different designs. Moreover, to observe for which value of $\lambda$ the two designs intersect, we generate observations from Normal(0,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20\}$ and $\omega = \{1, 2, \dots, 10\}$ under the same two designs.
 
-### Results 
+<!-- and the values of $wpd$ is computed for all these different values of the variables $nx$, $nfacet$, $\lambda$ and $\omega$ under two different designs $D_{var_x}$ and $D_{var_f}$ .  -->
 
-Figure \ref{fig:tuning-oneomega} shows how the value of $wpd$ changes for $\lambda = {0.1, 0.2, \dots, 0.9}$ for the two different designs $D_{var_x}$ and $D_{var_f}$ for two values of increment in mean $\omega = {1, 8}$. For a lower value of $\omega$, the two designs intersect at $\lambda > 0.7$ and for a higher $\omega$, the two designs intersect at $\lambda =  0.5$.
-The value of $wpd$ increases with $\lambda$ for $D_{var_x}$ and decreases with increasing $\lambda$ for 
-$D_{var_f}$. Figure \ref{fig:tuning-parameter-inter} shows the value of $\lambda$ for which the two designs intersect across different values of $\omega$. It can be observed that as the value of $\omega$ ($\omega > 4$) increase, the value of $\lambda$ at which the two designs intersect converge is $\lambda = 0.5$.
+_Results_
 
+Figure \ref{fig:tuning-oneomega} shows how the value of $wpd$ changes for $\lambda = {0.1, 0.2, \dots, 0.9}$ for the two different designs $D_{var_x}$ and $D_{var_f}$ for two values of increment in mean $\omega = {1, 8}$. For a lower value of $\omega$, the two designs intersect at $\lambda > 0.7$ and for a higher $\omega$, the two designs intersect at $\lambda =  0.5$. The value of $wpd$ increases with $\lambda$ for $D_{var_x}$ and decreases with increasing $\lambda$ for $D_{var_f}$. 
 
-```{r tuning-oneomega, fig.caption = "WPD from two designs are plotted for different values of lambda for different x and facet categories. For omega = 1, the designs intersect for 0.6<lamba<=0.75, whereas for higher omega, design intersects at lambda = 0.5"}
+```{r tuning-oneomega, fig.cap = " $wpd_{raw}$ from two designs are plotted for different values of $\\lambda$ $nx$ and $nfacet$. For $\\omega = 1$, the designs intersect for $0.6<\\lambda<=0.75$, whereas for higher omega, design intersects at $\\lambda = 0.5$."}
 knitr::include_graphics(here::here("simulations/tuning_param/figs/fixed_omega.png"))
 ```
-```{r tuning-parameter-inter, fig.cap ="For most panels it is observed that the most common value of the tuning paramter for which the designs interact is 0.5, which implies any value greater than 0.5 could be chosen to up-weigh the within-facet distances and down-weigh the between-facet distances for most sitatuions."}
+
+\noindent Figure \ref{fig:tuning-parameter-inter} shows the value of $\lambda$ for which the two designs intersect for different values of $\omega$. It can be observed that as the value of $\omega$ ($\omega > 4$) increase, the value of $\lambda$ at which the two designs intersect converge is $\lambda = 0.5$.
+
+```{r tuning-parameter-inter, fig.cap ="The point of intersection of $wpd_{raw}$ values under the designs $D_{var_f}$ and $D_{var_x}$ are plotted across different $\\omega$ and $\\lambda$. For most panels it is observed that a common value of $\\lambda$ for which the designs interact is $0.5$ for $\\omega >= 4$, which implies any value greater than $0.5$ could be chosen to up-weigh the within-facet distances and down-weigh the between-facet distances. The value of $\\lambda$ is higher for  $\\omega<4$ could be anywhere between 0.6 and 0.75."}
 knitr::include_graphics(here::here("simulations/tuning_param/figs/intersection_plot.png"))
 ```
 
-
 ## Underlying distributions   
 
-Since the measure $wpd$ is essentially set up to detect "differences" in distributions irrespective of underlying distribution, it would be ideal if it has minimal dependency on the type, location and scale of the initial distribution. To that end, some data pre-processing through the Normal Score Transform (NQT) has been applied in order to make most asymmetrical distributed measured variables more normal-like. Figure \ref{fig:gamma-diff-wotrans} shows ridge plots of raw $wpd$ for a Gamma(0.5,1), Gamma(2,1) before NQT. It is observed that for the underlying distribution Gamma(2,1), location and scale of the distribution of wpd changes from top-left panel to bottom-right panel. Moreover, the location and scale of the distribution of $wpd$ for different underlying distribution Gamma(0.5,1), Gamma(2,1). Figure \ref{fig:gamma-diff-quantrans} shows the the distributions of $wpd$ under same underlying distributions but after performing NQT. It is observed that within each panel, the distributions of the $wpd$ looks same, however, the distributions change from extreme top-left panel to bottom-right panels. Similar observations could be made in Figure \ref{fig:normal-diff-quantrans} for different underlying normal distributions  N(0,1), N(5,1) and N(0,5). This implies, NQT has atleast been able to bridge the gap in distribution of $wpd$ for different non-normal underlying distributions. 
+The following simulation study sees the impact of different underlying distributions on $wpd_{raw}$ for different $nx$ and $nfacet$ before and after performing Normal Quantile Transformation.   
+
+_Simulation design_
+
+Observations are generated from Normal(0,1), N(5, 1), N(0, 5), Gamma(0.5, 1) and Gamma(2, 1) distributions for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20, 31, 50\}$ and $wpd_{raw}$ is computed with $\lambda = 0.67$ with (scenario 1) and without (scenario 1) NQT.
+
+_Results_
+
+Figure \ref{fig:gamma-diff-wotrans} shows ridge plots of $wpd_{raw}$ for a Gamma(0.5,1), Gamma(2,1) before NQT. It is observed that for the underlying distribution Gamma(2,1), location and scale of the distribution of wpd changes from top-left panel to bottom-right panel. Figure \ref{fig:gamma-diff-quantrans} shows the the distributions of $wpd$ under same underlying distributions after performing NQT. It is observed that within each panel, the distributions of the $wpd$ looks same, however, the distributions change from extreme top-left panel to bottom-right panels. Similar observations could be made in Figure \ref{fig:normal-diff-quantrans} for different underlying normal distributions  N(0,1), N(5,1) and N(0,5). This implies, NQT has atleast been able to make the location and scale of the distribution of $wpd_{raw}$ same for different underlying distributions.
+
+
+<!-- Since the measure $wpd$ is essentially set up to detect "differences" in distributions irrespective of underlying distribution, it would be ideal if it has minimal dependency on the type, location and scale of the initial distribution. To that end, some data pre-processing through the Normal Score Transform (NQT) has been applied in order to make most asymmetrical distributed measured variables more normal-like. -->
 
 ```{r gamma-diff-wotrans, fig.cap="Ridge plots of raw wpd is shown for Gamma(0.5,1), Gamma(2,1) distribution without NQT. The densities change across different facet and x levels and also looks different for the two distributions, which implies wpd value is affected by the change in the shape paramter of the gamma distribution."}
 knitr::include_graphics(here::here("simulations/raw/null_design_scale/figs/gamma_ridge_nxbynfacet.png"))
@@ -173,63 +188,92 @@ knitr::include_graphics(here::here("simulations/raw/null_design_scale/figs/gamma
 knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/diff_mean3_gamma.png"))
 ```
 
-```{r normal-diff-quantrans, fig.cap = "Ridge plots of raw wpd is shown for N(0,1), N(5,1) and N(0,5) distribution. The densities change across different facet and x levels but look same for each panel, which implies wpd value is unaffected by the change in mean and standard deviation of the normal distribution", eval = FALSE}
+```{r normal-diff-quantrans, fig.cap = "Ridge plots of raw wpd is shown for N(0,1), N(5,1) and N(0,5) distribution. The densities change across different facet and x levels but look same for each panel, which implies wpd value is unaffected by the change in mean and standard deviation of the normal distribution."}
 knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/diff_mean3_normal.png"))
 ```
 
+## Number of comparisons 
+
+### Case: m = 1
+
+_Simulation design_
+
+\noindent Observations are generated from a N(0,1) distribution for each $nx = \{2, 3, 5, 7, 9, 14, 17, 20, 24, 31, 42, 50\}$ to cover a wide range of levels from very low to moderately high. $ntimes = 500$ observations are drawn for each combination of the categories, that is, for a panel with $nx=3$, $500$ observations are simulated for each of the categories. This design corresponds to $D_{null}$ as each combination of categories in a panel are drawn from the same distribution. Furthermore, the data is simulated for each of the categories $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed. The values of $wpd$ is obtained for each of the panels. $wpd_{l, s}$ denotes the value of $wpd$ obtained for the $l^{th}$ panel and $s^{th}$ simulation.
 
 
-## Case: m = 1
+_Results_
+
+Figure \ref{fig:nxbyfacet-ridge-N01-onegran} shows ridge plots of $wpd_{raw}$ for an underlying N(0,1) distribution. For each panel, it could be seen that the location shifts to the right for increasing x levels. Across each panel, the scale of the distribution seems to change for low/moderately from lower values  to higher values of $nx$ and left tails are longer for lower facet levels.
 
 ```{r nxbyfacet-ridge-N01-onegran, fig.cap="Ridge plots of raw wpd is shown for N(0,5) distribution. For each panel, it could be seen that the location shifts to the right for increasing x levels. Across each panel, the scale of the distribution seems to change for low/moderately lower values and higher values of nfacets and left tails are longer for lower facet levels."}
 knitr::include_graphics(here::here("simulations/supplementary/one-gran/raw/null_design_quantrans/figs/nxbyfacet_ridge_wpd_N01.png"))
 ```
 
-```{r nfacetbynx-onegran}
+```{r nfacetbynx-onegran, fig.cap="Ridge plots of raw wpd is shown for N(0,1) distribution. For each panel, it could be seen that the peakedness shifts for increasing x levels."}
 knitr::include_graphics(here::here("simulations/supplementary/one-gran/raw/null_design_quantrans/figs/nfacetbynx_ridge_wpd_N01.png"))
 ```
 
-```{r density-raw-onegran}
+```{r density-raw-onegran, eval = FALSE}
 knitr::include_graphics(here::here("simulations/supplementary/one-gran/raw/null_design_quantrans/figs/nxbyfacet_density_wpd_N01.png"))
 ```
 
+### Case: m = 2   
 
+_Simulation design_
 
+\noindent Similarly, observations are generated from a N(0,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20, 31, 50\}$. That is, data is being generated for each of the panels $(2, 2), (2, 3), (2, 5) \dots, (50, 31), (50, 50)$. For each of the $64$ panels, $ntimes = 500$ observations are drawn for each combination of the categories. That is, if we consider a $(2, 2)$ panel, $500$ observations are generated for each of the possible subsets, namely, $\{(1, 1), (1, 2), (2, 1), (2, 2)\}$. 
 
-## Case: m = 2
+Observations are generated from Gamma(2,1), G(0.5, 1), N(0,1), N(0, 5) and N(5, 1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20, 31, 50\}$ to cover a wide range of levels from very low to moderately high. Each combination is being referred to as a _panel_. That is, data is being generated for each of the panels $\{nx = 2, nfacet = 2\}, \{nx = 2, nfacet = 3\}, \{nx = 2, nfacet = 5\},  \dots, \{nx = 50, nfacet = 31\}, \{nx = 50, nfacet = 50\}$. For each of the $64$ panels, $ntimes = 500$ observations are drawn for each combination of the categories. That is, if we consider the panel $\{nx = 2, nfacet = 2\}$, $500$ observations are generated for each of the combination of categories from the panel, namely, $\{(1, 1), (1, 2), (2, 1), (2, 2)\}$. The values
+of $wpd$ is obtained for each of the panels. The measurement variable for each combination of categories in a panel are drawn from the same distribution and hence the design corresponds to $D_{null}$ . Furthermore, this entire method is repeated for each panels $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed.   
 
+_Results_
+
+Figure \ref{fig:nxbyfacet-ridge-N01}, \ref{fig:nfacetbynx} and  \ref{fig:density-raw} shows the ridge plot of $wpd_{raw}$ with $nx$ as facets, $nfacet$ as facets and the density plot of $wpd_{raw}$ with $nx$ on the x-axis and $nfacet$ on the facets.
 
 ```{r nxbyfacet-ridge-N01, fig.cap="Ridge plots of raw wpd is shown for N(0,5) distribution. For each panel, it could be seen that the location shifts to the right for increasing x levels. Across each panel, the scale of the distribution seems to change for low/moderately lower values and higher values of nfacets and left tails are longer for lower facet levels."}
 knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/nxbyfacet_ridge_wpd_N01.png"))
 ```
 
-```{r nfacetbynx}
+```{r nfacetbynx, fig.cap="something1"}
 knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/nfacetbynx_ridge_wpd_N01.png"))
 ```
 
-```{r density-raw}
+```{r density-raw, fig.cap="something2"}
 knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/nxbyfacet_density_wpd_N01.png"))
 ```
 
+# Adjusted weighted pairwise distances
 
-# Adjusted wpd
+_Simulation design_
+
+This sections shows the result from the different approaches of adjusting for the number of comparisons.Simulation design is the same as for raw weighted pairwise distances for $m=1$ and $m=2$. In place of $wpd_{raw}$, $wpd_{perm}$, $wpd_{glm}$ and $wpd$ is computed for all panel. 
+
+<!-- \noindent Observations are generated from a N(0,1) distribution for each $nx = \{2, 3, 5, 7, 9, 14, 17, 20, 24, 31, 42, 50\}$ to cover a wide range of levels from very low to moderately high. $ntimes = 500$ observations are drawn for each combination of the categories, that is, for a panel with $nx=3$, $500$ observations are simulated for each of the categories. This design corresponds to $D_{null}$ as each combination of categories in a panel are drawn from the same distribution. Furthermore, the data is simulated for each of the categories $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed. The values of $wpd$ is obtained for each of the panels. $wpd_{l, s}$ denotes the value of $wpd$ obtained for the $l^{th}$ panel and $s^{th}$ simulation. -->
+
+## Permutation approach
+
+Figure \ref{fig:one-gran-nxnyfacet} and \ref{fig:norm} show the normalized ${wpd}$ for $m=1$ and $m=2$ respectively. The location and scale are brought to similar values for increasing values of $nx$ or $nfacet$. Due to heavy computational load, $wpd_{perm}$ for few panels with very high value of $nx$ or $nfacet$ are not computed.
 
 
-## Case: m = 1
-
-### Simulation design
-
-\noindent Observations are generated from a N(0,1) distribution for each $nx = \{2, 3, 5, 7, 9, 14, 17, 20, 24, 31, 42, 50\}$ to cover a wide range of levels from very low to moderately high. $ntimes = 500$ observations are drawn for each combination of the categories, that is, for a panel with $nx=3$, $500$ observations are simulated for each of the categories. This design corresponds to $D_{null}$ as each combination of categories in a panel are drawn from the same distribution. Furthermore, the data is simulated for each of the categories $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed. The values of $wpd$ is obtained for each of the panels. $wpd_{l, s}$ denotes the value of $wpd$ obtained for the $l^{th}$ panel and $s^{th}$ simulation.
-
-### Permutation approach
-
-```{r}
-include_graphics(here("simulations/supplementary/one-gran/raw/null_design_quantrans/figs/nxbyfacet_ridge_wpd_N01.png"))
+```{r one-gran-nxnyfacet, fig.cap="something3"}
+include_graphics(here("simulations/supplementary/one-gran/norm/null_design_quantrans_nperm/figs/nxbyfacet_ridge_wpd_N01.png"))
 ```
 
 
-### Modeling approach
+```{r norm, fig.cap = "Distribution of $wpd_{perm}$ is plotted across different $nx$ and $nfacet$ categories. Both shape and scale of the distributions are now similar for different panels under the null design."}
+G21_norm <- read_rds(here("simulations/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_Gamma21.rds"))
 
+G21_norm %>% 
+  ggplot(aes(x = value)) + 
+  geom_density(fill = "blue") +
+  facet_grid(nx~nfacet,
+             labeller = "label_both") + 
+  scale_x_continuous(breaks = scales::breaks_extended(3)) + 
+  xlab("wpd normalised using permutation approach")
+
+```
+
+## Modeling approach
 
 ```{r}
 G21 <- read_rds(here("simulations/supplementary/one-gran/raw/null_design_quantrans/data-agg/all_data_wpd_N01.rds"))
@@ -242,6 +286,7 @@ G21_median <- G21 %>%
 glm_fit <- glm(actual ~ log(`nx * nfacet`),
                family = Gamma(link = "inverse"),
                data = G21_median)
+tidy(glm_fit)
 
 intercept <- glm_fit$coefficients[1]
 slope <- glm_fit$coefficients[2]
@@ -293,7 +338,134 @@ nxbyfacet_ridge
 ```
 
 
-### Combination approach
+### Case: m = 2   
+
+
+```{r}
+G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_Gamma21.rds"))
+G01 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_Gamma01.rds"))
+N01 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_N01.rds"))
+N05 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_N05.rds"))
+N51 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_N51.rds"))
+N55 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_N55.rds"))
+
+
+all_data <- bind_rows(G21 = G21, G01 = G01, N01= N01, N05 = N05, N51= N51, N55 = N55, .id = "group")
+
+
+all_median <- all_data %>% 
+  group_by(group, nx*nfacet) %>% 
+    summarise(actual = median(value))
+
+
+glm_model <- function(df) {
+  glm(actual ~ log(`nx * nfacet`), 
+               family = Gamma(link = "inverse"), data = df)
+}
+  
+glm_fit <- all_median %>% 
+  group_by(group) %>% 
+  nest()
+
+models <- map(glm_fit$data, glm_model)
+  
+  
+by_dist <- glm_fit %>% 
+  mutate(model = map(data, glm_model))
+ 
+tidy_obs <- by_dist %>%
+  mutate(tidy = map(model, tidy)) %>%
+  unnest(cols = c(tidy)) %>% 
+  mutate(estimate = round(estimate, 2),
+         std.error = round(std.error, 3),
+         statistic = round(statistic, 2))%>% 
+  mutate(distribution = case_when(
+    group== "G01" ~ "Gamma(0.5, 1)",
+    group== "G21" ~ "Gamma(2, 1)",
+    group== "N01" ~ "Normal(0, 1)",
+    group== "N05" ~ "Normal(0, 5)",
+    group== "N51" ~ "Normal(5, 1)",
+    group== "N55" ~ "Normal(5, 5)",
+    TRUE~ as.character(group)
+    )) %>% ungroup() %>% 
+  select(-data, -model, - group) %>% 
+     select(distribution, everything())  
+
+tidy_obs %>% kable(caption = "Results of generalised linear model to capture the relationship between $wpd_{raw}$ and number of comparisons for different underlying distribution.")
+```
+
+```{r}
+
+G21_median <- N01 %>%
+  group_by(nx*nfacet) %>%
+  summarise(actual = median(value))
+
+
+glm_fit <- glm(actual ~ log(`nx * nfacet`),
+               family = Gamma(link = "inverse"),
+               data = G21_median)
+# tidy(glm_fit)
+
+```
+
+## Combination approach
+
+
+### Case: m = 1   
+
+
+
+### Case: m = 2   
+
+
+```{r dist-new-same-scale-link, fig.cap = "The distribution of $wpd_{perm}$ and $wpd_{glm-scaled}$ are overlaid to compare the location and scale across different $nx$ and $nfacet$. $wpd_{norm}$ takes the value of $wpd_{perm}$ for lower levels, and $wpd_{glm-scaled}$ for higher levels to to alleviate the problem of computational time in permutation approaches. This is possible as the distribution of the adjusted measure looks similar for both appraches for higher levels."}
+G21_permutation <- read_rds(here("simulations/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_N01.rds")) %>%
+  rename("wpd_permutation" = "value")
+
+
+# G21_model_data <- G21 %>%
+#   mutate(model =
+#            ((1/value)
+#                   - intercept -
+#                     slope*log(nx*nfacet))/slope) %>%
+#   mutate(model_trans =
+#            (model - mean(model))/sd(model))
+
+# G21_model_data$model %>% summary()
+
+G21_all_data <- G21_permutation %>% 
+  # left_join(G21_lm, by = c("nx", "nfacet", "perm_id")) %>% 
+  left_join(G21_glm, by = c("nx", "nfacet", "perm_id")) %>% 
+  pivot_longer(cols = c(3, 7),
+               names_to = "type_estimate",
+               values_to = "value_estimate")
+G21_all_data$type_estimate = factor(G21_all_data$type_estimate , levels = c( "wpd_permutation", "wpd_glm_scaled"))
+
+
+summary_data <- G21_all_data %>% 
+  group_by(nx, nfacet, type_estimate) %>% 
+  summarise(mean = mean(value_estimate)) %>% ungroup()
+
+
+G21_all_data %>% 
+  filter(type_estimate %in% c("wpd_glm_scaled", "wpd_permutation")) %>% 
+  ggplot(aes(x = value_estimate)) +
+  geom_density(aes(fill = type_estimate), alpha = 0.5, size = .5) +
+  #geom_vline(data = summary_data, aes(xintercept = mean, color = type_estimate)) + 
+  geom_rug(aes(color = type_estimate), length = unit(0.09,"cm"), alpha = 0.5) +
+  #coord_cartesian(clip = "off") + 
+  facet_grid(nx~nfacet,
+             labeller = "label_both") +
+  theme_bw() + 
+  theme(legend.position = "bottom") +
+  scale_fill_manual(values = c( "#D55E00", "#0072B2")) +
+  scale_color_manual(values = c( "#D55E00", "#0072B2")) +
+  xlab("adjusted values of wpd") +
+  scale_x_continuous(breaks = c(-5, -3, 0, 3, 5)) 
+
+```
+
+
 
 ```{r}
 G21_permutation <- read_rds(here("simulations/supplementary/one-gran/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_N01.rds")) %>%
@@ -341,31 +513,12 @@ G21_all_data %>%
 ```
 
 
-## Case: m = 2
-
 ### Simulation design
 
 Observations are generated from Gamma(2,1), G(0.5, 1), N(0,1), N(0, 5) and N(5, 1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20, 31, 50\}$ to cover a wide range of levels from very low to moderately high. Each combination is being referred to as a _panel_. That is, data is being generated for each of the panels $\{nx = 2, nfacet = 2\}, \{nx = 2, nfacet = 3\}, \{nx = 2, nfacet = 5\},  \dots, \{nx = 50, nfacet = 31\}, \{nx = 50, nfacet = 50\}$. For each of the $64$ panels, $ntimes = 500$ observations are drawn for each combination of the categories. That is, if we consider the panel $\{nx = 2, nfacet = 2\}$, $500$ observations are generated for each of the combination of categories from the panel, namely, $\{(1, 1), (1, 2), (2, 1), (2, 2)\}$. The values
 of $wpd$ is obtained for each of the panels. The measurement variable for each combination of categories in a panel are drawn from the same distribution and hence the design corresponds to $D_{null}$ . Furthermore, this entire method is repeated for each panels $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed.
 
 
-### Permutation approach
-
-
-```{r norm, fig.cap = "Distribution of $wpd_{perm}$ is plotted across different $nx$ and $nfacet$ categories. Both shape and scale of the distributions are now similar for different panels under the null design."}
-G21_norm <- read_rds(here("simulations/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_Gamma21.rds"))
-
-G21_norm %>% 
-  ggplot(aes(x = value)) + 
-  geom_density(fill = "blue") +
-  facet_grid(nx~nfacet,
-             labeller = "label_both") + 
-  scale_x_continuous(breaks = scales::breaks_extended(3)) + 
-  xlab("wpd normalised using permutation approach")
-
-```
-
-### Modeling approach
 
 ```{r wpd-glm-dist, fig.cap = " The distribution of $wpd_{glm}$ is plotted. The distributions are more similar across higher nx and nfacet and dissimilar for fewer nc and nfacets."}
 
@@ -426,56 +579,9 @@ G21_glm %>%
 
 ```
 
-### Combination approach
-
-```{r dist-new-same-scale-link, fig.cap = "The distribution of $wpd_{perm}$ and $wpd_{glm-scaled}$ are overlaid to compare the location and scale across different $nx$ and $nfacet$. $wpd_{norm}$ takes the value of $wpd_{perm}$ for lower levels, and $wpd_{glm-scaled}$ for higher levels to to alleviate the problem of computational time in permutation approaches. This is possible as the distribution of the adjusted measure looks similar for both appraches for higher levels."}
-G21_permutation <- read_rds(here("simulations/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_N01.rds")) %>%
-  rename("wpd_permutation" = "value")
-
-
-# G21_model_data <- G21 %>%
-#   mutate(model =
-#            ((1/value)
-#                   - intercept -
-#                     slope*log(nx*nfacet))/slope) %>%
-#   mutate(model_trans =
-#            (model - mean(model))/sd(model))
-
-# G21_model_data$model %>% summary()
-
-G21_all_data <- G21_permutation %>% 
-  # left_join(G21_lm, by = c("nx", "nfacet", "perm_id")) %>% 
-  left_join(G21_glm, by = c("nx", "nfacet", "perm_id")) %>% 
-  pivot_longer(cols = c(3, 7),
-               names_to = "type_estimate",
-               values_to = "value_estimate")
-G21_all_data$type_estimate = factor(G21_all_data$type_estimate , levels = c( "wpd_permutation", "wpd_glm_scaled"))
-
-
-summary_data <- G21_all_data %>% 
-  group_by(nx, nfacet, type_estimate) %>% 
-  summarise(mean = mean(value_estimate)) %>% ungroup()
-
-
-G21_all_data %>% 
-  filter(type_estimate %in% c("wpd_glm_scaled", "wpd_permutation")) %>% 
-  ggplot(aes(x = value_estimate)) +
-  geom_density(aes(fill = type_estimate), alpha = 0.5, size = .5) +
-  #geom_vline(data = summary_data, aes(xintercept = mean, color = type_estimate)) + 
-  geom_rug(aes(color = type_estimate), length = unit(0.09,"cm"), alpha = 0.5) +
-  #coord_cartesian(clip = "off") + 
-  facet_grid(nx~nfacet,
-             labeller = "label_both") +
-  theme_bw() + 
-  theme(legend.position = "bottom") +
-  scale_fill_manual(values = c( "#D55E00", "#0072B2")) +
-  scale_color_manual(values = c( "#D55E00", "#0072B2")) +
-  xlab("adjusted values of wpd") +
-  scale_x_continuous(breaks = c(-5, -3, 0, 3, 5)) 
-
-```
-
 # Ranking and selecting harmonies
+
+## Size
 
 \noindent _Simulation design_  
  
@@ -504,7 +610,7 @@ ggplot() +
   geom_vline(data = data_summary, aes(xintercept = p_value),colour = "red")
 ```
 
-
+## Power
 
 ```{r hist-qq-new, fig.cap = "In panel a, the histogram of $wpd_{glm-scaled}$ is plotted. In part b, the QQ plot is shown with the theoretical quantiles on the x-axis and $wpd_{glm-scaled}$ quantiles on the y-axis. The distribution looks symmetric and looks like normal except in the tails.", eval = FALSE}
 
